# clash-simulator

./: .gitignore  README.md  RUNTIME_ERROR_FIX.md  analyze_decks.py  attribute_usage_analysis.py  auto_debug_screenshots.py  check_available_cards.py  check_deployment_zones.py  check_json_attrs.py  check_json_structure.py  check_troop_gimmicks.py  comprehensive_gimmick_test.py  debug_advanced_pathfinding.py  debug_battle_movement.py  debug_both_knights.py  debug_building_deployment.py  debug_close_combat.py  debug_cross_bridge.py  debug_death_spawn.py  debug_deployment_zones.py  debug_enemy_deployment.py  debug_failing_cards.py  debug_golem.py  debug_left_bridge.py  debug_movement.py  debug_movement_blocking.py  debug_position_validation.py  debug_red_knight.py  debug_red_knight_attack.py  debug_right_bridge_issue.py  debug_royal_recruits_count.py  debug_royal_recruits_positioning.py  debug_royal_recruits_test.py  debug_specific_cards.py  debug_spell_casting.py  debug_spell_deployment.py  debug_spell_deployment_fixed.py  debug_tinting.py  debug_tints.py  debug_visualizer.py  (+70 more)
.claude/: settings.local.json
reports/: card_data_model.md  compositional_card_system_implementation.md
scripts/: spawn_card_agents.sh  spawn_card_agents_claude.sh
tests/: test_advanced.py  test_basic.py  test_battle.py  test_building_footprint.py  test_card_mechanics.py  test_champion_ability_activation.py  test_coverage_gaps.py  test_gym_env.py  test_inferno_ramp.py  test_match_rules.py  test_mechanics_deep.py  test_rl_action_mask.py  test_rl_obs_cv.py  test_rl_train_utils.py  (+2 more)
(+224 files in other folders)
