[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clasher"
version = "0.1.0"
description = "Fast Clash Royale battle engine simulator"
requires-python = ">=3.10"
dependencies = [
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "numba>=0.56.0",
    "msgspec>=0.18.0"
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]